fixed invisible burger menu div

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -4,18 +4,9 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 25, 34, 41;
-    --background-end-rgb: 11, 19, 25;
-  }
+button {
+  -webkit-user-select: none;
+  -moz-user-select: none;
 }
 
 .modal {
